# sale-server

./: .gitignore  Cargo.toml  Makefile  README.md  dev.samconfig.toml  template.yaml
cfn/: ddb.yaml  s3.yaml  sns.yaml
crawler-amazon/: crawl_product_detail.ts  crawl_product_list.ts  package-lock.json  package.json  tsconfig.json
crawler-rakuten/: Cargo.toml
crawler-rakuten/src/: crawl_product_detail.rs  crawl_product_list.rs  main.rs
sale/: Cargo.toml
sale-api/: Cargo.toml
sale-api/src/: graphql.rs  main.rs
sale-api/src/graphql/: connection.rs  data_loader.rs  errors.rs  master.rs  service.rs
sale-api/src/graphql/service/: mutation.rs  query.rs
sale-api/src/graphql/service/types/: product.rs
sale-api/src/graphql/shared/: types.rs
sale/src/: di.rs  domain.rs  env.rs  errors.rs  lib.rs  sync.rs
sale/src/domain/: product.rs  time.rs  user.rs
sale/src/infra/: aws.rs
sale/src/infra/aws/: ddb.rs  dynamo.rs  lambda.rs  sns.rs  ssm.rs
sale/src/infra/aws/ddb/: cursor.rs  errors.rs  index.rs  prelude.rs  types.rs
sale/src/infra/aws/ddb/types/: product.rs
sale/src/infra/aws/dynamo/types/: product.rs
sale/src/infra/aws/lambda/: types.rs
sale/src/infra/aws/lambda/types/: crawler_rakuten.rs  sns.rs
scheduled-crawler/: Cargo.toml
scheduled-crawler/src/: main.rs
