[package]
name = "sale-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sale = { path = "../sale" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.83"
lambda-web = { version = "0.2.1", features = ["actix4"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
async-graphql = { version = "7.0.11", features = ["dataloader", "log", "tracing"] }
async-graphql-actix-web = "7.0.11"
async-graphql-value = "7.0.11"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
derive_more = { version = "1", features = ["full"] }
url = "2.5.2"
