[package]
name = "sale"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
derive_more = { version = "1", features = ["full"] }
reqwest = { version = "0.12.8", features = ["blocking", "rustls-tls", "json"] }
