[package]
name = "sale"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.83"
aws-config = "1.5.8"
aws-types = "1.3.3"
aws-sdk-ssm = "1.51.0"
aws-sdk-s3 = "1.51.0"
aws-sdk-dynamodb = "1.51.0"
aws-sdk-lambda = "1.51.0"
aws-sdk-sns = "1.48.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
derive_more = { version = "1", features = ["full"] }
url = "2.5.2"
strum = "0.26.1"
strum_macros = "0.26.4"
base-62 = "0.1.1"
rand = "0.8.5"
once_cell = "1.20.2"
dotenv-parser = "0.1.3"
base64 = "0.21.7"
chrono = "0.4.38"
